added more courses, got rid of not needed links

--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@
       <nav>
         <menu>
           <li><a href="index.html">Home</a></li>
-          <li><a href="enter-scores.html">Enter Scores</a></li>
           <li><a href="leaderboard.html">Leaderboard</a></li>
-          <li><a href="about.html">About</a></li>
         </menu>
       </nav>
       <hr />
@@ -45,6 +43,8 @@
       <select>
         <option value="course1">Utah State Hospital</option>
         <option value="course2">Jolley's Ranch</option>
+        <option value="course2">Dragonfly</option>
+        <option value="course2">Art Dye</option>
       </select>
     </main>
 
