created leaderboard page

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </header>
 
     <main>
-      <!-- Placeholder for authentication -->
+      <!-- authentication -->
       <h2>Login to Your Account</h2>
       <form method="post" action="/login">
         <div>
