added in stats page, updated index to reflect

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <menu>
           <li><a href="index.html">Home</a></li>
           <li><a href="leaderboard.html">Leaderboard</a></li>
+          <li><a href="stats.html">Stats</a></li>
         </menu>
       </nav>
       <hr />
@@ -43,8 +44,8 @@
       <select>
         <option value="course1">Utah State Hospital</option>
         <option value="course2">Jolley's Ranch</option>
-        <option value="course2">Dragonfly</option>
-        <option value="course2">Art Dye</option>
+        <option value="course3">Dragonfly</option>
+        <option value="course4">Art Dye</option>
       </select>
     </main>
 
