added in a keep score page. added in DG team image

--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <title>BYU DG Stats</title>
     <link rel="icon" href="favicon.ico" />
   </head>
-  <body>
-    <!-- Use header, main, and footer elements to give semantic structure -->
-    <header>
-      <h1>BYU DG Stats</h1>
+  <header>
+    <!-- Logo Image -->
+    <img src="images/BYU_Disc_Golf_Team_logo.jpg" alt="BYU Disc Golf Team Logo" style="max-width: 200px; height: auto;" />
+    
+    <h1>BYU DG Stats</h1>
 
       <!-- Navigation elements -->
       <nav>
@@ -17,11 +18,11 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="leaderboard.html">Leaderboard</a></li>
           <li><a href="stats.html">Stats</a></li>
+          <li><a href="scorecard.html">Start a round</a></li>
         </menu>
       </nav>
       <hr />
     </header>
-
     <main>
       <!-- authentication -->
       <h2>Login to Your Account</h2>
@@ -37,18 +38,6 @@
         <button type="submit">Login</button>
         <button type="button" onclick="window.location.href='register.html'">Create Account</button>
       </form>
-
-      <!-- Placeholder for application data -->
-      <h2>Course Information</h2>
-      <p>Select a course to begin tracking your scores.</p>
-      <select>
-        <option value="course1">Utah State Hospital</option>
-        <option value="course2">Jolley's Ranch</option>
-        <option value="course3">Dragonfly</option>
-        <option value="course4">Art Dye</option>
-      </select>
-    </main>
-
     <footer>
       <hr />
       <span>Created by Abe Field</span>
