--- a/leaderboard.html
+++ b/leaderboard.html
@@ -60,10 +60,11 @@
       }
     </style>
   </head>
-  <body>
-    <!-- Use header, main, and footer elements to give semantic structure -->
-    <header>
-      <h1>BYU DG Stats</h1>
+  <header>
+    <!-- Logo Image -->
+    <img src="images/BYU_Disc_Golf_Team_logo.jpg" alt="BYU Disc Golf Team Logo" style="max-width: 200px; height: auto;" />
+    
+    <h1>BYU DG Scorecard</h1>
 
       <!-- Navigation elements -->
       <nav>
