--- a/stats.html
+++ b/stats.html
@@ -16,7 +16,10 @@
 </head>
 <body>
     <header>
-        <h1>BYU DG Stats</h1>
+        <!-- Logo Image -->
+        <img src="images/BYU_Disc_Golf_Team_logo.jpg" alt="BYU Disc Golf Team Logo" style="max-width: 200px; height: auto;" />
+        
+        <h1>BYU DG Scorecard</h1>
         <nav>
             <menu>
                 <li><a href="index.html">Home</a></li>
