small changes in layout for most pages created a scorecard.js to show local course weather when players created a round. updated read me to display current weather api

--- a/leaderboard.html
+++ b/leaderboard.html
@@ -70,7 +70,8 @@
       <nav>
         <menu>
           <li><a href="index.html">Home</a></li>
-          <li><a href="leaderboard.html">Leaderboard</a></li>
+          <li><a href="stats.html">Stats</a></li>
+          <li><a href="scorecard.html">Start a round</a></li>
         </menu>
       </nav>
     </header>
