--- a/stats.html
+++ b/stats.html
@@ -24,7 +24,7 @@
             <menu>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="leaderboard.html">Leaderboard</a></li>
-                <li><a href="stats.html">Stats</a></li>
+                <li><a href="scorecard.html">Start a round</a></li>
             </menu>
         </nav>
         <hr />
