--- a/stats.html
+++ b/stats.html
@@ -17,7 +17,7 @@
 <body>
     <header>
         <!-- Logo Image -->
-        <img src="images/BYU_Disc_Golf_Team_logo.jpg" alt="BYU Disc Golf Team Logo" style="max-width: 200px; height: auto;" />
+        <img src="BYU_Disc_Golf_Team_logo.jpg" alt="BYU Disc Golf Team Logo" style="max-width: 200px; height: auto;" />
         
         <h1>BYU DG Scorecard</h1>
         <nav>
