--- a/stats.html
+++ b/stats.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BYU DG Stats</title>
     <link rel="icon" href="favicon.ico" />
+    <link rel="stylesheet" href="style.css" /> <!-- Link to your external CSS -->
     <script>
         function updateBirdieTitle() {
             const courseSelect = document.getElementById("course");
@@ -14,16 +15,15 @@
         }
     </script>
 </head>
-<body>
+<<body>
     <header>
-        <!-- Logo Image -->
         <img src="BYU_Disc_Golf_Team_logo.jpg" alt="BYU Disc Golf Team Logo" style="max-width: 200px; height: auto;" />
-        
-        <h1>BYU DG Scorecard</h1>
+        <h1>BYU Disc Golf Scores and Stats</h1>
         <nav>
             <menu>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="leaderboard.html">Leaderboard</a></li>
+                <li><a href="stats.html">Stats</a></li>
                 <li><a href="scorecard.html">Start a round</a></li>
             </menu>
         </nav>
