--- a/leaderboard.html
+++ b/leaderboard.html
@@ -5,85 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Leaderboard - BYU DG Stats</title>
     <link rel="icon" href="favicon.ico" />
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-        }
-
-        header {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
-
-        nav {
-            margin-left: 20px;
-        }
-
-        menu {
-            list-style: none;
-            display: flex;
-            gap: 15px;
-        }
-
-        li {
-            display: inline;
-        }
-
-        main {
-            padding: 20px;
-        }
-
-        footer {
-            text-align: center;
-            padding: 20px 0;
-        }
-
-        table {
-            width: 100%;
-            border-collapse: collapse;
-            margin-top: 20px;
-        }
-
-        table, th, td {
-            border: 1px solid black;
-        }
-
-        th, td {
-            padding: 10px;
-            text-align: center;
-        }
-
-        select {
-            padding: 5px;
-            margin-bottom: 20px;
-        }
-
-        .placeholder {
-            margin: 20px 0;
-            padding: 10px;
-            border: 1px dashed #ccc;
-            text-align: center;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css" /> <!-- Link to your external CSS -->
 </head>
 <body>
     <header>
-        <!-- Logo Image -->
         <img src="BYU_Disc_Golf_Team_logo.jpg" alt="BYU Disc Golf Team Logo" style="max-width: 200px; height: auto;" />
-        <h1>BYU DG Scorecard</h1>
-
-        <!-- Navigation elements -->
+        <h1>BYU Disc Golf Scores and Stats</h1>
         <nav>
             <menu>
                 <li><a href="index.html">Home</a></li>
+                <li><a href="leaderboard.html">Leaderboard</a></li>
                 <li><a href="stats.html">Stats</a></li>
                 <li><a href="scorecard.html">Start a round</a></li>
             </menu>
         </nav>
+        <hr />
     </header>
-
-    <hr />
 
     <main>
         <!-- Course selection -->
