--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                 <li><a href="leaderboard.html">Leaderboard</a></li>
                 <li><a href="stats.html">Stats</a></li>
                 <li><a href="scorecard.html">Start a round</a></li>
+                <li><a href="login.html">Login</a></li>
             </menu>
         </nav>
         <hr />
